--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@tailwindcss/forms": "^0.5.10",
     "@types/bcryptjs": "^3.0.0",
     "autoprefixer": "10.4.20",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "next": "15.4.0-canary.127",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "5.0.0-beta.29",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
     "react": "latest",
@@ -25,6 +26,7 @@
     "zod": "^3.25.17"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
